Add DevPath parser function. Serial number reading is TBD.

--- a/CamParaRead/CamParaRead.vcxproj.filters
+++ b/CamParaRead/CamParaRead.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="CamParaRead.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="iSerialNum.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="iSerialNum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
